// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> should render Amount with default props 1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="bold"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    ₹
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontSize={100}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1,000
      .
    </Text>
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="regular"
      marginLeft="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 2,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> should render MYR currency Amount  1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="bold"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    RM
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontSize={100}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1,000
      .
    </Text>
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="regular"
      marginLeft="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 2,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> should render all sizes of Amount 1`] = `
Array [
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={100}
        fontWeight="regular"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={100}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={75}
        fontWeight="regular"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={75}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={100}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={400}
        fontWeight="regular"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={100}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={100}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={400}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={100}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={200}
        fontWeight="regular"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={200}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={75}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
  <View
    alignItems="baseline"
    display="flex"
    flexDirection="row"
    style={
      Array [
        Object {
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "paddingLeft": 4,
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={400}
      fontWeight="bold"
      marginRight="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 20,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 2,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      <Text
        color="surface.text.normal.lowContrast"
        fontSize={700}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "hsla(217, 56%, 17%, 1)",
              "fontFamily": "Lato",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        1,000
        .
      </Text>
      <Text
        color="surface.text.muted.lowContrast"
        fontSize={400}
        fontWeight="regular"
        marginLeft="spacing.1"
        style={
          Array [
            Object {
              "color": "hsla(216, 16%, 60%, 1)",
              "fontFamily": "Lato",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 2,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        00
      </Text>
    </Text>
  </View>,
]
`;

exports[`<Amount /> should render amount with Decimal value 1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="bold"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    ₹
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontSize={200}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1,000
      .
    </Text>
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="regular"
      marginLeft="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 2,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      22
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> should render amount with Humanize value 1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="bold"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    ₹
  </Text>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={200}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1k
  </Text>
</View>
`;

exports[`<Amount /> should render information intent Amount  1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="feedback.text.information.lowContrast"
    fontSize={100}
    fontWeight="regular"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(193, 100%, 35%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    ₹
  </Text>
  <Text
    color="feedback.text.information.lowContrast"
    fontSize={100}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(193, 100%, 35%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
  </Text>
</View>
`;

exports[`<Amount /> should render positive intent Amount  1`] = `
<View
  alignItems="baseline"
  display="flex"
  flexDirection="row"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <Text
    color="feedback.text.positive.lowContrast"
    fontSize={75}
    fontWeight="bold"
    marginRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(160, 100%, 26%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 2,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    ₹
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    <Text
      color="feedback.text.positive.lowContrast"
      fontSize={100}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(160, 100%, 26%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1,000
      .
    </Text>
    <Text
      color="feedback.text.positive.lowContrast"
      fontSize={75}
      fontWeight="regular"
      marginLeft="spacing.1"
      style={
        Array [
          Object {
            "color": "hsla(160, 100%, 26%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 2,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      00
    </Text>
  </Text>
</View>
`;
